# namespace_packages_transition_trial

./: .gitignore  _deploy_all.bat  _deploy_editable_c.bat  _run_all.bat  _undeploy_all.bat
proj_ref_a/: MANIFEST.in  setup.cfg
proj_ref_b/: setup.cfg
proj_ref_b/proj_ref/: __init__.py
proj_ref_b/proj_ref/b/: __main__.py
proj_ref_c/: pyproject.toml  setup.cfg
proj_ref_c/proj_ref/c/: __main__.py
proj_ref_d/: setup.cfg
proj_ref_d/proj_ref/a/: __main__.py
proj_ref_d/proj_ref/d/: __main__.py
root_namespace_proj_ref/: setup.cfg
tests/: test_seq_simple.bat
