[metadata]
name = proj_ref-b
version = 1.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = true
install_requires =
    root-namespace-proj_ref>=1.0.1

[options.packages.find]
include = proj_ref*
